force-app/main/default/objects/ReturnLineItem__c/ReturnLineItem__c.object-meta.xml
<CustomObject>
    <label>본사반품상세</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>