force-app/main/default/objects/ReturnLineItem__c/fields/ConfirmNetAmount__c.field-meta.xml
<CustomField>
    <fullName>ConfirmNetAmount__c</fullName>
    <formula>NetPrice__c * ConfirmQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Confirm Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>