force-app/main/default/objects/ReturnLineItem__c/fields/ConfirmQuantity__c.field-meta.xml
<CustomField>
    <fullName>ConfirmQuantity__c</fullName>
    <label>Confirm Quantity</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>