force-app/main/default/objects/ReturnLineItem__c/fields/ReturnNo__c.field-meta.xml
<CustomField>
    <fullName>ReturnNo__c</fullName>
    <label>Return No</label>
    <referenceTo>Return__c</referenceTo>
    <relationshipName>Return_Item</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>