force-app/main/default/objects/ReturnLineItem__c/fields/SkuOption4__c.field-meta.xml
<CustomField>
    <fullName>SkuOption4__c</fullName>
    <label>Sku Option4</label>
    <length>100</length>
    <type>Text</type>
</CustomField>